redone UI with pure Bootstrap

--- a/views/LoginForm/index.html
+++ b/views/LoginForm/index.html
@@ -11,111 +11,54 @@
       rel="stylesheet"
       type="text/css"
     />
+
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
+      
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
   </head>
   <body>
-    <!-- partial:index.partial.html -->
-    <div id="back">
-      <canvas id="canvas" class="canvas-back"></canvas>
-      <div class="backRight"></div>
-      <div class="backLeft"></div>
-    </div>
-
-    <div id="slideBox">
-      <div class="topLayer">
-        <div class="left">
-          <div class="content">
-            <h2>Sign Up</h2>
-            <form id="form-signup" method="post" onsubmit="return false;">
-              <div class="form-element form-stack">
-                <label for="email" class="form-label">Email</label>
-                <input id="email" type="email" name="email" />
-              </div>
-              <div class="form-element form-stack">
-                <label for="username-signup" class="form-label">Username</label>
-                <input id="username-signup" type="text" name="username" />
-              </div>
-              <div class="form-element form-stack">
-                <label for="password-signup" class="form-label">Password</label>
-                <input id="password-signup" type="password" name="password" />
-              </div>
-              <div class="form-element form-checkbox">
-                <input
-                  id="confirm-terms"
-                  type="checkbox"
-                  name="confirm"
-                  value="yes"
-                  class="checkbox"
-                />
-                <label for="confirm-terms"
-                  >I agree to the <a href="#">Terms of Service</a> and
-                  <a href="#">Privacy Policy</a></label
-                >
-              </div>
-              <div class="form-element form-submit">
-                <button id="signUp" class="signup" type="submit" name="signup">
-                  Sign up
-                </button>
-                <button id="goLeft" class="signup off">Log In</button>
-              </div>
-            </form>
-          </div>
+    <div class="container-fluid">
+      <div class="row align-items-center" style="height: 100vh;">
+        <div class="col" id="backgroundCol"style="height: 100%;">
+          <!-- Here we have the image background thingy-->
+          <div class="image_background"></div>
         </div>
-        <div class="right">
-          <div class="content">
-            <h2>Login</h2>
-            <form id="form-login" method="post" onsubmit="return false;">
-              <div class="form-element form-stack">
-                <label for="username-login" class="form-label">Username</label>
-                <input id="username-login" type="text" name="username" />
-              </div>
-              <div class="form-element form-stack">
-                <label for="password-login" class="form-label">Password</label>
-                <input id="password-login" type="password" name="password" />
-              </div>
-              <div class="form-element form-submit">
-                <button
-                  id="logIn"
-                  class="login"
-                  type="button"
-                  name="login"
-                  onclick="_login()"
-                >
-                  Log In
-                </button>
-                <button id="goRight" class="login off" name="signup">
-                  Sign Up
-                </button>
-              </div>
-            </form>
+        <div class="col p-5" style="height: 100%;">
+          <!-- Here we have the login side -->
+          <div class="row">
+            <div class="col align-self-center">
+              <h3 class="text-center">DWK Incident Respone</h2>
+            </div>
           </div>
+          <div class="row pt-5" style="height: 75%;">
+            <div class="col">
+              <h1 class="pbt-3">Login</h1>
+              <form>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Username</label>
+                  <input type="text" class="form-control" id="loginFormUsername">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control" id="loginFormPassword">
+                </div>
+                <button type="submit" id="loginButton" class="btn btn-primary">Login</button>
+              </form>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
-
-    <!-- 
-
-Remixed from "Sliding Login Form" Codepen by
-C-Rodg (github.com/C-Rodg)
-https://codepen.io/crodg/pen/yNKxej
-
-Remixed from "Paper.js - Animated Shapes Header" Codepen by
-Connor Hubeny (@cooper_hu)
-https://codepen.io/cooper_hu/pen/ybxoev
-
-Custom Checkbox based on the blog post by
-Mik Ted (@inserthtml):
-https://www.inserthtml.com/2012/06/custom-form-radio-checkbox/
-
-HTML5 Form Validation based on the blog post by
-Thoriq Firdaus (@tfirdaus):
-https://webdesign.tutsplus.com/tutorials/
-html5-form-validation-with-the-pattern-attribute--cms-25145
-
--->
-    <!-- partial -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.11.3/paper-full.min.js"></script>
-    <script src="./script.js"></script>
   </body>
 </html>
