added company name to navbar

--- a/views/EndUser/index.html
+++ b/views/EndUser/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark nav-background">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+    <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
 <div class="container">
     <div class="row align-items-center" style="height: 100vh;">
