--- a/views/LoginForm/index.html
+++ b/views/LoginForm/index.html
@@ -48,7 +48,7 @@
                             <label for="exampleInputPassword1">Password</label>
                             <input class="form-control" id="loginFormPassword" type="password">
                         </div>
-                        <button class="btn btn-primary" id="loginButton" type="submit">Login</button>
+                        <button class="btn btn-primary" id="loginButton" type="button" onclick="_login()">Login</button>
                     </form>
                 </div>
             </div>
