removed page scrolling because of navbar

--- a/views/EndUser/index.html
+++ b/views/EndUser/index.html
@@ -24,7 +24,7 @@
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
 <div class="container">
-    <div class="row align-items-center" style="height: 100vh;">
+    <div class="row align-items-center" style="height: calc(100vh - 56px);">
         <div class="col p-5">
             <div class="card incident-cards">
                 <div class="card-body incident-card-body">
