added an incident page for every role

--- a/views/EndUser/index.html
+++ b/views/EndUser/index.html
@@ -5,7 +5,6 @@
     <title>BSAD-APP</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css"/>
-
     <!-- Latest compiled and minified CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet"/>
@@ -23,6 +22,8 @@
 <nav class="navbar navbar-dark nav-background">
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
+<h1>Greetings Peter_Williams</h1>
+
 <div class="container">
     <div class="row align-items-center" style="height: 100vh;">
         <div class="col p-5">
