--- a/views/QueueManager/index.html
+++ b/views/QueueManager/index.html
@@ -1,1 +1,48 @@
-<h1>Hello David_Davison</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <title>BSAD-APP</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css"/>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet"/>
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+<nav class="navbar navbar-dark nav-background">
+    <span class="navbar-brand mb-0 h1">DWK</span>
+</nav>
+<h1>Greetings David_Davison</h1>
+
+<div class="container">
+    <div class="row align-items-center" style="height: 100vh;">
+        <div class="col p-5">
+            <div class="card incident-cards">
+                <div class="card-body incident-card-body">
+                    <h3 class="card-text text-center">Raise a new incident</h3>
+                    <button class="btn btn-primary btn-block" type="button">Raise</button>
+                </div>
+            </div>
+        </div>
+        <div class="col p-5 ">
+            <div class="card incident-cards">
+                <div class="card-body incident-card-body">
+                    <h3 class="card-text text-center">View all incidents</h3>
+                    <button class="btn btn-primary btn-block" type="button">View</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
