--- a/views/EndUser/index.html
+++ b/views/EndUser/index.html
@@ -30,7 +30,7 @@
             <div class="card incident-cards">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">Raise a new incident</h3>
-                    <button class="btn btn-primary btn-block" type="button">Raise</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /NewIncident/index.html';">Raise</button>
                 </div>
             </div>
         </div>
@@ -38,9 +38,9 @@
             <div class="card incident-cards">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">View all incidents</h3>
-                    <button class="btn btn-primary btn-block" type="button">View</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /AllIncidents/index.html';">View</button>
                 </div>
-            </div>
+            </div>  
         </div>
     </div>
 </div>
