--- a/views/EndUser/index.html
+++ b/views/EndUser/index.html
@@ -22,20 +22,18 @@
 <nav class="navbar navbar-dark nav-background">
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
-<h1>Greetings Peter_Williams</h1>
-
-<div class="container">
-    <div class="row align-items-center" style="height: calc(100vh - 56px);">
+<div class="container-fluid" style="height: calc(100% - 56px);">
+    <div class="row h-100 align-items-center justify-content-center">
         <div class="col p-5">
-            <div class="card incident-cards">
+            <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">Raise a new incident</h3>
                     <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /NewIncident/index.html';">Raise</button>
                 </div>
             </div>
         </div>
-        <div class="col p-5 ">
-            <div class="card incident-cards">
+        <div class="col p-5">
+            <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">View all incidents</h3>
                     <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /AllIncidents/index.html';">View</button>
