--- a/views/QueueManager/index.html
+++ b/views/QueueManager/index.html
@@ -22,25 +22,23 @@
 <nav class="navbar navbar-dark nav-background">
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
-<h1>Greetings David_Davison</h1>
-
-<div class="container">
-    <div class="row align-items-center" style="height: 100vh;">
+<div class="container-fluid" style="height: calc(100% - 56px);">
+    <div class="row h-100 align-items-center justify-content-center">
         <div class="col p-5">
-            <div class="card incident-cards">
+            <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">Raise a new incident</h3>
-                    <button class="btn btn-primary btn-block" type="button">Raise</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /NewIncident/index.html';">Raise</button>
                 </div>
             </div>
         </div>
-        <div class="col p-5 ">
-            <div class="card incident-cards">
+        <div class="col p-5">
+            <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">View all incidents</h3>
-                    <button class="btn btn-primary btn-block" type="button">View</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /AllIncidents/index.html';">View</button>
                 </div>
-            </div>
+            </div>  
         </div>
     </div>
 </div>
