--- a/views/MajorIncidentsManager/index.html
+++ b/views/MajorIncidentsManager/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css"/>
     <!-- Latest compiled and minified CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"/>
+    <link href="../styles/style.css" rel="stylesheet"/>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,12 +23,12 @@
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
 <div class="container-fluid" style="height: calc(100% - 56px);">
-    <div class="row h-60 align-items-center justify-content-center">
+    <div class="row h-100 align-items-center justify-content-center">
         <div class="col p-5">
             <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">Raise a new incident</h3>
-                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /NewIncident/index.html';">Raise</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident/NewIncident/index.html';">Raise</button>
                 </div>
             </div>
         </div>
@@ -36,19 +36,9 @@
             <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">View all incidents</h3>
-                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /AllIncidents/index.html';">View</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident/AllIncidents/index.html';">View</button>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="row h-40 align-items-center justify-content-center">
-        <div class="col p-5">
-            <div class="card assignment-card mx-auto">
-                <div class="card-body assignment-card-body">
-                    <h3 class="card-text text-center">My Assignments</h3>
-                    <button class="btn btn-primary btn-block" type="button">View</button>
-                </div>
-            </div>
+            </div>  
         </div>
     </div>
 </div>
