--- a/views/QueueManager/index.html
+++ b/views/QueueManager/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css"/>
     <!-- Latest compiled and minified CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"/>
+    <link href="../styles/style.css" rel="stylesheet"/>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
             <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">Raise a new incident</h3>
-                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /NewIncident/index.html';">Raise</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident/NewIncident/index.html';">Raise</button>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">View all incidents</h3>
-                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /AllIncidents/index.html';">View</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident/AllIncidents/index.html';">View</button>
                 </div>
             </div>  
         </div>
