--- a/views/Incident/NewIncident/index.html
+++ b/views/Incident/NewIncident/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css"/>
     <!-- Latest compiled and minified CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"/>
+    <link href="../../styles/style.css" rel="stylesheet"/>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -49,21 +49,21 @@
                             </div>
                             <div class="col">
                                 <div class="form-group">
-                                    <label for="newIncidentPriorityLevel">Incident Priority Level</label>
-                                    <select id="newIncidentPriorityLevel" class="form-control">
-                                        <option selected>P1</option>
-                                        <option>P2</option>
-                                        <option>P3</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="form-group">
                                     <label for="newIncidentSeverityLevel">Incident Severity Level</label>
                                     <select id="newIncidentSeverityLevel" class="form-control">
                                         <option selected>S1</option>
                                         <option>S2</option>
                                         <option>S3</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="newIncidentPriorityLevel">Incident Priority Level</label>
+                                    <select class="form-control" id="newIncidentPriorityLevel">
+                                        <option selected>P1</option>
+                                        <option>P2</option>
+                                        <option>P3</option>
                                     </select>
                                 </div>
                             </div>
