--- a/views/ServiceDesk/index.html
+++ b/views/ServiceDesk/index.html
@@ -28,7 +28,7 @@
             <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">Raise a new incident</h3>
-                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /NewIncident/index.html';">Raise</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident/NewIncident/index.html';">Raise</button>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="card incident-cards mx-auto">
                 <div class="card-body incident-card-body">
                     <h3 class="card-text text-center">View all incidents</h3>
-                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident /AllIncidents/index.html';">View</button>
+                    <button class="btn btn-primary btn-block" type="button" onclick="window.location='../Incident/AllIncidents/index.html';">View</button>
                 </div>
             </div>
         </div>
