--- a/views/QueueManager/Incident/NewIncident/index.html
+++ b/views/QueueManager/Incident/NewIncident/index.html
@@ -24,6 +24,9 @@
 <nav class="navbar navbar-dark nav-background">
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
+<div class="container-fluid pt-3">
+    <button class="btn btn-primary" onclick="returnToHome()">Back</button>
+</div>
 <div class="container" style="height: calc(100% - 56px);">
     <div class="row h-100 align-items-center justify-content-center">
         <div class="col p-5">
