--- a/views/Resolver/Assignment/index.html
+++ b/views/Resolver/Assignment/index.html
@@ -24,8 +24,8 @@
 <nav class="navbar navbar-dark nav-background">
     <span class="navbar-brand mb-0 h1">DWK</span>
 </nav>
-<div style="padding: 10pt;">
-    <button class="btn btn-primary" style="top: 100pt; left: 10pt" onclick="returnToHome()">Back</button>
+<div class="container-fluid pt-3">
+    <button class="btn btn-primary" onclick="returnToHome()">Back</button>
 </div>
 <div class="container-fluid" style="height: calc(100% - 56px);">
     <div class="row h-100 align-items-center justify-content-center">
