--- a/views/MajorIncidentsManager/Incident/SpecificIncident/index.html
+++ b/views/MajorIncidentsManager/Incident/SpecificIncident/index.html
@@ -71,56 +71,52 @@
                     </table>
                 </div>
             </div>
-            <div class="card mt-5">
+            <div class="card mt-5" id="notes">
                 <h3 class="card-header">Note Logs</h3>
-                <div class="card-body">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr class="table-primary">
-                            <th style="width: 10%;" scope="col">Name</th>
-                            <th style="width: 10%;" scope="col">Time of Note</th>
-                            <th style="width: 80%;" scope="col">Details</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>15:00</td>
-                            <td>Some details go here. Some details go here. Some details go here. Some details go here. Some details go here. Some details go here. Some details go here. </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="card-body">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr class="table-primary">
-                            <th style="width: 10%;" scope="col">Name</th>
-                            <th style="width: 10%;" scope="col">Time of Note</th>
-                            <th style="width: 80%;" scope="col">Details</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>15:00</td>
-                            <td>Some details go here. Some details go here. Some details go here. Some details go here. Some details go here. Some details go here. Some details go here. </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+
             </div>
             <div class="card mt-5">
                 <div class="card-body pl-5 pr-5">
                     <div class="row">
                         <div class="col">
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Add a Note</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block"
+                                    data-toggle="modal" data-target="#createNewNote">Add a Note</button>
                         </div>
                         <div class="col">
                             <button type="button" class="btn btn-primary btn-lg btn-block">Generate report</button>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="createNewNote" tabindex="-1" role="dialog" aria-labelledby="createNewNoteTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Create new Note</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="newNoteTime">Note Time</label>
+                        <input type="text" class="form-control" id="newNoteTime" placeholder="HH:MM">
+                    </div>
+                    <div class="form-group">
+                        <label for="newNoteDescription">Note Description</label>
+                        <textarea class="form-control" id="newNoteDescription" rows="3"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal"
+                        onclick="sendNoteData()">Save changes</button>
             </div>
         </div>
     </div>
