--- a/views/MajorIncidentsManager/Incident/AllIncidents/index.html
+++ b/views/MajorIncidentsManager/Incident/AllIncidents/index.html
@@ -52,7 +52,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
+                        <tr style="cursor: pointer;" onclick="window.location='../SpecificIncident/index.html';">
                             <th scope="row">1</th>
                             <td>Customer login times are very high.</td>
                             <td>Peter_Williams</td>
