added dropdowns for specificIncident and button

--- a/views/Resolver/Incident/SpecificIncident/index.html
+++ b/views/Resolver/Incident/SpecificIncident/index.html
@@ -93,7 +93,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <button class="btn btn-primary">Update</button>
+                    <button class="btn btn-primary">Request higher priority</button>
                 </div>
             </div>
             <div class="card mt-5" id="notes">
